# spark

./: .gitignore  .mise.toml  Dockerfile  Makefile  README.md  bitcoin_regtest.conf  cleanup.sh  lrcd.template.config.toml  run-everything.sh  run-wallet.sh  so.template.config.yaml  so_config.yaml
protos/: dkg.proto  lrc20.proto  mock.proto  spark.proto  spark_authn.proto  spark_authn_internal.proto  spark_internal.proto  spark_tree.proto
scripts/: gen-migration.sh  run-development-dkg.sh
sdks/js/: .gitignore  LICENSE  package.json  turbo.json
sdks/rs/: Cargo.toml
sdks/rs/cli/: Cargo.toml
sdks/rs/spark-protos/: Cargo.toml  build.rs
signer/: .gitignore  Cargo.toml
signer/spark-frost/: Cargo.toml  build.rs
signer/spark-frost-signer/: Cargo.toml
signer/spark-frost-signer/src/: dkg.rs  main.rs  server.rs
signer/spark-frost-uniffi/: .gitignore  Cargo.toml  README.md  build-bindings.sh  build-swift.sh  build.rs
signer/spark-frost-uniffi/spark-frost-python/: MANIFEST.in  README.md  requirements.txt  setup.py
signer/spark-frost-uniffi/spark-frost-python/scripts/: generate-linux-arm64.sh  generate-linux.sh  generate-macos-arm64.sh  generate-macos-x86_64.sh
signer/spark-frost-uniffi/spark-frost-python/src/spark_frost/: __init__.py
signer/spark-frost-uniffi/spark-frost-swift/spark_frostFFI.xcframework/: Info.plist
signer/spark-frost-uniffi/spark-frost-swift/spark_frostFFI.xcframework/ios-arm64/spark_frostFFI.framework/Modules/: module.modulemap
signer/spark-frost-uniffi/spark-frost-swift/spark_frostFFI.xcframework/ios-arm64_x86_64-simulator/spark_frostFFI.framework/Headers/: spark_frostFFI-umbrella.h
signer/spark-frost-uniffi/src/: lib.rs  spark_frost.udl
signer/spark-frost/protos/: common.proto  frost.proto
signer/spark-frost/src/: frost_test.rs  lib.rs  proto.rs  signing.rs
spark/: .golangci.yml  .mise.toml  constant.go  go.mod  go.sum
spark/common/: adaptor_signature.go  adaptor_signature_test.go  bitcoin.go  bitcoin_test.go  collections.go  connection.go  keys.go  keys_test.go  proof.go  proto_convertable.go
spark/common/logging/: slog.go  table.go
spark/common/secret_sharing/: secret_sharing.go  secret_sharing_test.go
spark/proto/common/: common.pb.go  common.pb.validate.go
spark/proto/dkg/: dkg.pb.go  dkg.pb.validate.go  dkg_grpc.pb.go
spark/proto/frost/: frost.pb.go  frost.pb.validate.go  frost_grpc.pb.go
spark/proto/lrc20/: lrc20.pb.go  lrc20.pb.validate.go  lrc20_grpc.pb.go
spark/proto/mock/: mock.pb.go  mock.pb.validate.go  mock_grpc.pb.go
spark/proto/spark/: spark.pb.go  spark.pb.validate.go  spark_grpc.pb.go
spark/proto/spark_authn/: spark_authn.pb.go  spark_authn.pb.validate.go  spark_authn_grpc.pb.go
spark/proto/spark_authn_internal/: spark_authn_internal.pb.go  spark_authn_internal.pb.validate.go
spark/proto/spark_internal/: spark_internal.pb.go  spark_internal.pb.validate.go  spark_internal_grpc.pb.go
spark/proto/spark_tree/: spark_tree.pb.go  spark_tree.pb.validate.go  spark_tree_grpc.pb.go
spark/so/: config.go  operator.go
spark/test_util/: test_config.go  test_context.go  test_faucet.go  test_tree.go  test_tx.go
spark/wallet/: aggregate.go  authn.go  config.go  coop_exit.go  deposit.go  events.go  lightning.go  lightning_ssp.go  lightning_user.go  refresh_timelock.go  signing.go  token_transaction.go  transaction.go  transfer.go  tree_creation.go  wallet.go
tools/: Pipfile
tools/paylightning/: Cargo.toml  README.md
(+316 files in other folders)
