[workspace]
resolver = "2"
members = [
    "spark-frost",
    "spark-frost-signer", "spark-frost-uniffi",
    # "spark-frost-uniffi",
]

[workspace.dependencies]
prost = "0.13.3"
tonic = "0.12.3"
tokio = { version = "1.41.0", features = ["macros", "rt-multi-thread", "signal"] }
tokio-stream = "0.1.16"
frost-secp256k1-tr = { git = "https://github.com/lightsparkdev/frost", branch = "nested-signing" }
frost-core = { git = "https://github.com/lightsparkdev/frost", branch = "nested-signing" }
rand = "0.8.5"
serde = "1.0.214"
hex = "0.4.3"
clap = { version = "4.5.20", features = ["derive"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tonic-build = "0.12.3"
uuid = { version = "1.1.2", features = ["v4"] }
ecies = { "version" = "0.2.7", default-features = false, features = ["pure"]}

[profile.release-smaller]
inherits = "release"
opt-level = 'z'     # Optimize for size.
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = 'abort'     # Abort on panic
strip = true        # Strip symbols from binary*

[workspace.metadata.cross.target.aarch64-unknown-linux-gnu]
pre-build = [
    "dpkg --add-architecture arm64",
    "apt-get update",
    "apt-get install --assume-yes libssl-dev:arm64",
    "apt-get install --assume-yes protobuf-compiler",
]
